refactor: 이메일 템플릿 내부 사진 S3 업로드 후 링크 적용, DefaultEmailSender `@Profile` 적용

--- a/src/main/resources/templates/StudyCertificateEmailTemplate.html
+++ b/src/main/resources/templates/StudyCertificateEmailTemplate.html
@@ -84,10 +84,11 @@
 
         <hr class="hr_setting"/>
         <p>상기인은 위의 스터디를 성공적으로 수료하였음을 인정하여 이 수료증을 수여합니다.</p>
-        <img src="cid:image" class="stamp_size" alt=""/>
+        <img src="https://study-with-me-email.s3.ap-northeast-2.amazonaws.com/stamp.png" class="stamp_size" alt=""/>
     </div>
 </div>
-<br><br><hr>
+<br><br>
+<hr>
 <div style="text-align: center">
     <p style="font-size: 12px;">본 메일은 회원님께서 (주) 여기서 구해볼래 메일 수신에 동의여부에 따라 발송된 메일입니다.</p>
     <p style="font-size: 12px;">메일 수신을 원치 않으시면 <a href="#">[수신거부]</a>를 클릭하십시오.</p>
