--- a/src/main/resources/templates/ParticipationApproveEmailTemplate.html
+++ b/src/main/resources/templates/ParticipationApproveEmailTemplate.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="cid:image" class="logo-size" alt=""/>
+    <img src="https://study-with-me-email.s3.ap-northeast-2.amazonaws.com/top.png" class="logo-size" alt=""/>
     <h1><strong th:text="${studyName}"></strong> 참여 승인 메일</h1>
     <p>
         축하드립니다! <strong th:text="${nickname}"></strong>님은
@@ -48,7 +48,8 @@
     <p>이 스터디에서 많은 도움과 지식을 얻으실 수 있기를 바랍니다.</p>
     <p>스터디 관련 자세한 정보는 저희 사이트를 참고해주세요.</p>
 </div>
-<br><br><hr>
+<br><br>
+<hr>
 <div style="text-align: center">
     <p style="font-size: 12px;">본 메일은 회원님께서 (주) 여기서 구해볼래 메일 수신에 동의여부에 따라 발송된 메일입니다.</p>
     <p style="font-size: 12px;">메일 수신을 원치 않으시면 <a href="#">[수신거부]</a>를 클릭하십시오.</p>
