--- a/src/main/resources/templates/ParticipationRejectEmailTemplate.html
+++ b/src/main/resources/templates/ParticipationRejectEmailTemplate.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="https://study-with-me-email.s3.ap-northeast-2.amazonaws.com/top.png" class="logo-size" alt=""/>
+    <img src="https://cdn.study-with-me.co.kr/basic-assets/top.png" class="logo-size" alt=""/>
     <h1><strong th:text="${studyName}"></strong> 참여 거절 메일</h1>
     <p>
         아쉽게도 <strong th:text="${nickname}"></strong>님은
