--- a/src/main/resources/templates/StudyCertificateEmailTemplate.html
+++ b/src/main/resources/templates/StudyCertificateEmailTemplate.html
@@ -84,7 +84,7 @@
 
         <hr class="hr_setting"/>
         <p>상기인은 위의 스터디를 성공적으로 수료하였음을 인정하여 이 수료증을 수여합니다.</p>
-        <img src="https://study-with-me-email.s3.ap-northeast-2.amazonaws.com/stamp.png" class="stamp_size" alt=""/>
+        <img src="https://cdn.study-with-me.co.kr/basic-assets/stamp.png" class="stamp_size" alt=""/>
     </div>
 </div>
 <br><br>
